<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/nav_home"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/menu_home"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:background="@drawable/home_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/nav_cards"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/menu_cards"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:background="@drawable/card_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav_support"
        android:layout_marginTop="@dimen/margin_bet_lay"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/menu_support"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:background="@drawable/phone_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav_req"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/menu_myreq"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:background="@drawable/profile_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_bet_lay"
        android:id="@+id/nav_share"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/menu_share"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:background="@drawable/share_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView"
            android:layout_width="0dp"
            android:id="@+id/nav_logout"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/menu_logout"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small"
            android:background="@drawable/logout_icon" />
    </LinearLayout>

</LinearLayout>