<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_discover_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:src="@drawable/paris" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/discover_frame_height"
        android:alpha="0.6"
        android:background="@android:color/black">

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:elevation="1dp"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/dummy_data_discover"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableLeft="@drawable/white_loc"
            android:drawablePadding="4dp"
            android:text="@string/dummy_data_discover_paris"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_discover_rl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_discover_iv"
        android:layout_marginEnd="@dimen/margin_left_small"
        android:layout_marginStart="@dimen/margin_left_small">

        <ImageButton
            android:id="@+id/item_discover_ib_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_small"
            android:background="@drawable/add_image_icon" />

        <TextView
            android:id="@+id/item_discover_tv_name"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_very_small"
            android:layout_toEndOf="@+id/item_discover_ib_add"
            android:text="@string/dummy_data_name" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/item_discover_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_discover_tv_name"
            android:layout_toEndOf="@id/item_discover_ib_add"
            android:isIndicator="true"
            android:numStars="6"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/item_discover_tv_review"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_left_very_small"
            android:drawableStart="@drawable/reviews"
            android:text="@string/dummy_data_review" />

        <TextView
            android:id="@+id/item_discover_tv_time"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_left_very_small"
            android:layout_toStartOf="@+id/item_discover_tv_review"
            android:drawableStart="@drawable/time_1"
            android:text="@string/dummy_data_time" />

        <TextView
            android:id="@+id/item_discover_tv_text"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/item_discover_ib_add"
            android:layout_marginTop="@dimen/margin_top_very_small"
            android:text="@string/dummy_data_text" />

    </RelativeLayout>

    <TextView
        style="@style/RoundedCornerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/item_discover_rl_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/margin_top_medium"
        android:layout_marginEnd="@dimen/margin_left_small"
        android:text="@string/send_request" />


</RelativeLayout>